--- a/jinjooRC_practice/public_html/assets/css/foodhut.css
+++ b/jinjooRC_practice/public_html/assets/css/foodhut.css
@@ -11323,7 +11323,7 @@ pre {
 }
 
 .section-title {
-  margin-top: 10px;
+  margin-bottom: 30px;
   font-size: 2rem;
   font-family: 'MaplestoryOTFLight';
 }
