--- a/jinjooRC_practice/public_html/assets/css/menu01.css
+++ b/jinjooRC_practice/public_html/assets/css/menu01.css
@@ -74,28 +74,28 @@
     background-color: #f8f9fa;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(../imgs/jinjooabout.jpeg);
+    background-image: url(../imgs/logo1.png);
     background-size: 100%;
   }
   .slide_item.item3 {
     background-color: #f8f9fa;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(../imgs/jinjooabout.jpeg);
+    background-image: url(../imgs/logo2.png);
     background-size: 100%;
   }
   .slide_item.item4 {
     background-color: #f8f9fa;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(../imgs/jinjooabout.jpeg);
+    background-image: url(../imgs/jinjoo.jpeg);
     background-size: 100%;
   }
   .slide_item.item5 {
     background-color: #f8f9fa;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(../imgs/jinjooabout.jpeg);
+    background-image: url(../imgs/jinjoo.png);
     background-size: 100%;
   }
   
